# 5dchess_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bind.cpp  cli.cpp  emmodule.cpp  host.py  pymodule.cpp  setup.py  test.cpp  test.py  test_compare.py  test_deep.py  test_perft.py  test_timeout.py  updatehyper.md
.github/workflows/: build.yml
changed_extern/client/static/: bot.js  onload.js  socket.js  style.css
changed_extern/client/templates/: index.html
changed_extern/pybind11/include/pybind11/: stl_bind.h
docs/: branched-5dpgn.md  index.md  pgn-bnf.txt
src/bot/: bot.cpp  bot.h  flat_ucb.cpp  flat_ucb.h
src/core/: action.cpp  action.h  ast.cpp  ast.h  bitboard.cpp  bitboard.h  bitboard.inl  finetree.cpp  finetree.h  game.cpp  game.h  gametree.cpp  gametree.h  hypercuboid.cpp  hypercuboid.h  multiverse.cpp  multiverse.h  multiverse_base.cpp  multiverse_base.h  pgnparser.cpp  state.cpp  state.h  state.inl  turn.h  variants.cpp  variants.h
src/misc/: debug.h  geometry.cpp  geometry.h  graph.cpp  graph.h  integer_set.cpp  integer_set.h  stream.h  utils.h  vec4.h
test/: 30134.cpp  CMakeLists.txt  flat_ucb_bot.cpp  just_unicorns.cpp  lazy_stream.cpp  random_action.cpp  rollout.cpp  show_pgn.cpp  test_bitboards.cpp  test_finetree.cpp  test_hcutils.cpp  test_integer_set.cpp  treesearch.cpp  two_timelines.cpp  very_small.cpp
test/pgn/: README.txt  futures.5dpgn  number1.5dpgn  softmate.5dpgn
ui/: index.html  onload.js  style.css
ui/assets/: attributions.txt
ui/scripts/: canvas.js  color.js  draw.js  hash.js  main.js  onload.js  parse.js  piece.js  ui.js  worker.js
ui/styles/: color-schemes.css  main.css  panels.css  popup.css
ui/wasm/: index.html  package.json  test.js
